Modifying Styles for agentList.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,7 +50,7 @@
 <script>
 
 
-    tableUrl = "http://localhost:5000/agents"
+    tableUrl = "http://ccms2-env.eba-nnxzk2ii.us-east-1.elasticbeanstalk.com/agents"
 
 
 
