--- a/src/main/resources/static/agentList.html
+++ b/src/main/resources/static/agentList.html
@@ -1,32 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-    @import url('https://fonts.cdnfonts.com/css/caviar-dreams');
-    table {
-        border-collapse: collapse; /* Para evitar espacios entre celdas */
-        background-color: #e6e6e6;
-        width: 100%; /* Ancho completo de la tabla */
-    }
-    td {
-        font-family: 'Trebuchet MS';
-        border: 1px solid black; /* Borde de 1 píxel de ancho, sólido y de color negro */
-        padding: 8px; /* Espaciado interno */
-        text-align: left; /* Alineación del texto */
-    }
-    th {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: black;
-        color: white;
-        font-weight: bold;
-        border: 1px solid black; /* Borde de 1 píxel de ancho, sólido y de color negro */
-        padding: 8px; /* Espaciado interno */
-        text-align: left; /* Alineación del texto */
-    }
-    input {
-        font-style: italic;
-    }
-</style>
 
 <head>
     <meta charset="UTF-8">
@@ -61,7 +35,7 @@
 
 
 <script>
-    const url = "http://localhost:5000/agents"
+    const url = "http://ccms2-env.eba-nnxzk2ii.us-east-1.elasticbeanstalk.com/agents"
     populateTable();
 
 
