last mods to controller, servce and html file to match names with the app purpose

--- a/src/main/resources/static/agentList.html
+++ b/src/main/resources/static/agentList.html
@@ -185,8 +185,8 @@
                 }
                 return response.json();
             })
-            .then(studentFromAPI => {
-                console.log('Success:', studentFromAPI);
+            .then(agentFromAPI => {
+                console.log('Success:', agentFromAPI);
                 cleanTableRows();
                 populateTable();
             })
